--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -512,7 +512,109 @@
 #         run: exit 1
 
 # real
-name: Playwright Tests with Allure Report with local server
+# name: Playwright Tests with Allure Report with local server
+
+# on:
+#   push:
+#     branches:
+#       - main
+#   pull_request:
+#     branches:
+#       - main
+#   schedule:
+#     - cron: "0 18 * * *" # Runs at 12:00 AM Dhaka time (UTC+6)
+
+# jobs:
+#   test:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v4
+
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: 18
+
+#       - name: Install Dependencies
+#         run: npm ci
+
+#       - name: Install Playwright browsers
+#         run: npx playwright install --with-deps
+
+#       - name: Run Playwright Tests
+#         run: npx playwright test
+#         continue-on-error: true
+
+#       - name: Setup Java
+#         uses: actions/setup-java@v4
+#         with:
+#           java-version: "11"
+#           distribution: "temurin"
+
+#       - name: Install Allure Command Line Tool
+#         run: npm install -g allure-commandline
+
+#       - name: Generate Allure Report
+#         run: |
+#           # Clean any existing report to avoid leftovers
+#           rm -rf allure-report
+#           allure generate allure-results --clean -o allure-report || echo "Report generation failed"
+#         continue-on-error: true
+
+#       - name: Debug Allure Report Structure
+#         run: |
+#           echo "Listing contents of allure-report:"
+#           ls -la allure-report || echo "Report directory empty"
+#           ls -la allure-report/data || echo "No data folder found"
+#           find . -name "*.zip" -exec echo "Found ZIP: {}" \; || echo "No unexpected ZIPs detected"
+#           tree allure-report || echo "Install 'tree' for better structure view: sudo apt-get install tree"
+#         continue-on-error: true
+
+#       - name: Compress Allure Report
+#         run: |
+#           # Remove any existing ZIP to avoid confusion
+#           rm -f allure-report.zip
+#           # Zip contents explicitly, ensuring no nesting
+#           cd allure-report
+#           zip -r ../allure-report.zip *  # Use * to include all files directly
+#           cd ..
+#           echo "ZIP created at: $(pwd)/allure-report.zip"
+#           ls -lh allure-report.zip
+#           unzip -l allure-report.zip  # List ZIP contents for verification
+#         continue-on-error: true
+
+#       - name: Upload Allure Report Artifact
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: allure-report
+#           path: allure-report.zip
+#           retention-days: 7
+#         continue-on-error: true
+
+#       - name: Send Email with Report Link
+#         uses: dawidd6/action-send-mail@v3
+#         with:
+#           server_address: smtp.gmail.com
+#           server_port: 465
+#           username: ${{ secrets.EMAIL_USERNAME }}
+#           password: ${{ secrets.EMAIL_PASSWORD }}
+#           subject: "Allure Test Report"
+#           body: |
+#             The Allure report is too large to attach. Download it from:
+#             ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+#             After downloading, unzip allure-report.zip two times to get the allure-report folder.
+#             Run 'npx http-server' in the allure-report folder and open http://127.0.0.1:8080 to view.
+#           to: "sazidahmednassir@gmail.com" # Replace with your email
+#           from: ${{ secrets.EMAIL_USERNAME }}
+
+#       - name: Fail Workflow if Tests Failed
+#         if: failure()
+#         run: exit 1
+
+# name: Playwright Tests with Allure Report
+name: Playwright Tests with Allure Report as Single HTML
 
 on:
   push:
@@ -540,60 +642,42 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
-      - name: Install Playwright browsers
+      - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
       - name: Run Playwright Tests
         run: npx playwright test
         continue-on-error: true
 
-      - name: Setup Java
-        uses: actions/setup-java@v4
-        with:
-          java-version: "11"
-          distribution: "temurin"
-
-      - name: Install Allure Command Line Tool
-        run: npm install -g allure-commandline
+      - name: Install Allure Command Line Tool and Puppeteer
+        run: |
+          npm install -g allure-commandline puppeteer
 
       - name: Generate Allure Report
         run: |
-          # Clean any existing report to avoid leftovers
           rm -rf allure-report
           allure generate allure-results --clean -o allure-report || echo "Report generation failed"
         continue-on-error: true
 
-      - name: Debug Allure Report Structure
+      - name: Convert Allure Report to Single HTML File
         run: |
-          echo "Listing contents of allure-report:"
-          ls -la allure-report || echo "Report directory empty"
-          ls -la allure-report/data || echo "No data folder found"
-          find . -name "*.zip" -exec echo "Found ZIP: {}" \; || echo "No unexpected ZIPs detected"
-          tree allure-report || echo "Install 'tree' for better structure view: sudo apt-get install tree"
+          echo "Converting Allure report to a single HTML file..."
+          node <<EOF
+          const puppeteer = require('puppeteer');
+          const fs = require('fs');
+
+          (async () => {
+              const browser = await puppeteer.launch({ args: ['--no-sandbox', '--disable-setuid-sandbox'] });
+              const page = await browser.newPage();
+              await page.goto('file://$PWD/allure-report/index.html', { waitUntil: 'networkidle0' });
+              const content = await page.content();
+              fs.writeFileSync('allure-report.html', content);
+              await browser.close();
+          })();
+          EOF
         continue-on-error: true
 
-      - name: Compress Allure Report
-        run: |
-          # Remove any existing ZIP to avoid confusion
-          rm -f allure-report.zip
-          # Zip contents explicitly, ensuring no nesting
-          cd allure-report
-          zip -r ../allure-report.zip *  # Use * to include all files directly
-          cd ..
-          echo "ZIP created at: $(pwd)/allure-report.zip"
-          ls -lh allure-report.zip
-          unzip -l allure-report.zip  # List ZIP contents for verification
-        continue-on-error: true
-
-      - name: Upload Allure Report Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-report
-          path: allure-report.zip
-          retention-days: 7
-        continue-on-error: true
-
-      - name: Send Email with Report Link
+      - name: Send Email with Allure HTML Report
         uses: dawidd6/action-send-mail@v3
         with:
           server_address: smtp.gmail.com
@@ -602,12 +686,10 @@ jobs:
           password: ${{ secrets.EMAIL_PASSWORD }}
           subject: "Allure Test Report"
           body: |
-            The Allure report is too large to attach. Download it from:
-            ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-            After downloading, unzip allure-report.zip two times to get the allure-report folder.
-            Run 'npx http-server' in the allure-report folder and open http://127.0.0.1:8080 to view.
-          to: "sazidahmednassir@gmail.com" # Replace with your email
+            The Allure report is attached as a single HTML file. Open it in your browser to view the test results.
+          to: "sazidahmednassir@gmail.com" # Replace with the recipient's email
           from: ${{ secrets.EMAIL_USERNAME }}
+          attachments: allure-report.html
 
       - name: Fail Workflow if Tests Failed
         if: failure()
