updated yml file

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -645,8 +645,10 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
-      - name: Install Puppeteer Locally
-        run: npm install puppeteer
+      - name: Install Required Tools
+        run: |
+          npm install puppeteer
+          npm install inline-assets
 
       - name: Run Playwright Tests
         run: npx playwright test
@@ -667,13 +669,27 @@ jobs:
           node <<EOF
           const puppeteer = require('puppeteer');
           const fs = require('fs');
+          const inlineAssets = require('inline-assets');
 
           (async () => {
               const browser = await puppeteer.launch({ args: ['--no-sandbox', '--disable-setuid-sandbox'] });
               const page = await browser.newPage();
               await page.goto('file://$PWD/allure-report/index.html', { waitUntil: 'networkidle0' });
-              const content = await page.content();
-              fs.writeFileSync('allure-report.html', content);
+
+              // Save the initial HTML content
+              const htmlContent = await page.content();
+              fs.writeFileSync('allure-report-temp.html', htmlContent);
+
+              // Inline all assets into the HTML file
+              await inlineAssets('allure-report-temp.html', {
+                  inline: true,
+                  compress: false,
+                  rootpath: './allure-report',
+              });
+
+              // Save the final single HTML file
+              fs.renameSync('allure-report-temp.html', 'allure-report.html');
+
               await browser.close();
           })();
           EOF
