--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -614,7 +614,7 @@
 #         run: exit 1
 
 # name: Playwright Tests with Allure Report
-name: Playwright Tests with Allure Report as Single HTML
+name: Playwright Tests with Allure Report Deployment
 
 on:
   push:
@@ -623,8 +623,6 @@ on:
   pull_request:
     branches:
       - main
-  schedule:
-    - cron: "0 18 * * *" # Runs at 12:00 AM Dhaka time (UTC+6)
 
 jobs:
   test:
@@ -645,9 +643,6 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
-      - name: Install Puppeteer
-        run: npm install puppeteer
-
       - name: Run Playwright Tests
         run: npx playwright test
         continue-on-error: true
@@ -661,50 +656,13 @@ jobs:
           allure generate allure-results --clean -o allure-report || echo "Report generation failed"
         continue-on-error: true
 
-      - name: Convert Allure Report to Single HTML File
-        run: |
-          echo "Converting Allure report to a single HTML file..."
-          node <<EOF
-          const puppeteer = require('puppeteer');
-          const fs = require('fs');
+      - name: Deploy Allure Report to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./allure-report
 
-          (async () => {
-              try {
-                  const browser = await puppeteer.launch({ args: ['--no-sandbox', '--disable-setuid-sandbox'] });
-                  const page = await browser.newPage();
-                  await page.goto('file://$PWD/allure-report/index.html', { waitUntil: 'networkidle0' });
-
-                  // Capture the fully rendered page as a single HTML file
-                  const htmlContent = await page.evaluate(() => {
-                      const doc = document.documentElement.cloneNode(true);
-                      const base = document.createElement('base');
-                      base.href = document.location.href;
-                      doc.querySelector('head').appendChild(base);
-                      return doc.outerHTML;
-                  });
-
-                  fs.writeFileSync('allure-report.html', htmlContent);
-                  console.log("Allure report successfully converted to a single HTML file.");
-                  await browser.close();
-              } catch (error) {
-                  console.error("Error during Allure report conversion:", error);
-                  process.exit(1);
-              }
-          })();
-          EOF
-        continue-on-error: true
-
-      - name: Verify Allure HTML File
-        run: |
-          echo "Verifying allure-report.html file..."
-          if [ -f "allure-report.html" ]; then
-            echo "allure-report.html exists and is ready to be sent."
-          else
-            echo "allure-report.html not found. Exiting."
-            exit 1
-          fi
-
-      - name: Send Email with Allure HTML Report
+      - name: Send Email with Allure Report Link
         uses: dawidd6/action-send-mail@v3
         with:
           server_address: smtp.gmail.com
@@ -713,10 +671,18 @@ jobs:
           password: ${{ secrets.EMAIL_PASSWORD }}
           subject: "Allure Test Report"
           body: |
-            The Allure report is attached as a single HTML file. Open it in your browser to view the test results.
+            The Allure report is now available online.
+
+            🔗 **Allure Report URL:**
+            👉 [View Allure Report](https://<your-github-username>.github.io/<your-repository-name>/)
+
+            📌 **Run Details:**
+            - Repository: ${{ github.repository }}
+            - Branch: ${{ github.ref_name }}
+            - Commit: ${{ github.sha }}
+            - Workflow Run: ${{ github.run_id }}
           to: "sazidahmednassir@gmail.com" # Replace with the recipient's email
           from: ${{ secrets.EMAIL_USERNAME }}
-          attachments: allure-report.html
 
       - name: Fail Workflow if Tests Failed
         if: failure()
