--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -614,7 +614,7 @@
 #         run: exit 1
 
 # name: Playwright Tests with Allure Report
-name: Playwright Tests with Allure Report Deployment
+name: Playwright Tests with Allure Report as Single HTML
 
 on:
   push:
@@ -654,7 +654,7 @@ jobs:
 
       # Step 6: Install Allure Command Line Tool
       - name: Install Allure Command Line Tool
-        run: npm install -g allure-commandline
+        run: npm install -g allure-commandline puppeteer
 
       # Step 7: Generate Allure Report
       - name: Generate Allure Report
@@ -663,15 +663,29 @@ jobs:
           allure generate allure-results --clean -o allure-report || echo "Report generation failed"
         continue-on-error: true
 
-      # Step 8: Deploy Allure Report to GitHub Pages
-      - name: Deploy Allure Report to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.TOKEN }}
-          publish_dir: ./allure-report
+      # Step 8: Convert Allure Report to Single HTML File
+      - name: Convert Allure Report to Single HTML File
+        run: |
+          echo "Converting Allure report to a single HTML file..."
+          node <<EOF
+          const puppeteer = require('puppeteer');
+          const fs = require('fs');
 
-      # Step 9: Send Email with Allure Report Link
-      - name: Send Email with Allure Report Link
+          (async () => {
+              const browser = await puppeteer.launch({ args: ['--no-sandbox', '--disable-setuid-sandbox'] });
+              const page = await browser.newPage();
+              await page.goto('file://$PWD/allure-report/index.html', { waitUntil: 'networkidle0' });
+
+              // Save the HTML content
+              const htmlContent = await page.content();
+              fs.writeFileSync('allure-report.html', htmlContent);
+
+              await browser.close();
+          })();
+          EOF
+
+      # Step 9: Send Email with Allure Report as Attachment
+      - name: Send Email with Allure Report
         uses: dawidd6/action-send-mail@v3
         with:
           server_address: smtp.gmail.com
@@ -679,19 +693,10 @@ jobs:
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
           subject: "Allure Test Report"
-          body: |
-            The Allure report is now available online.
-
-            🔗 **Allure Report URL:**
-            👉 [View Allure Report](https://<your-github-username>.github.io/<your-repository-name>/)
-
-            📌 **Run Details:**
-            - Repository: ${{ github.repository }}
-            - Branch: ${{ github.ref_name }}
-            - Commit: ${{ github.sha }}
-            - Workflow Run: ${{ github.run_id }}
-          to: "sazidahmednassir@gmail.com" # Replace with the recipient's email
+          body: "The Allure report is attached as a single HTML file. Open it in your browser to view the test results."
+          to: "sazidahmednassir@gmail.com"
           from: ${{ secrets.EMAIL_USERNAME }}
+          attachments: allure-report.html
 
       # Step 10: Fail Workflow if Tests Failed
       - name: Fail Workflow if Tests Failed
