--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -654,37 +654,16 @@ jobs:
 
       # Step 6: Install Allure Command Line Tool
       - name: Install Allure Command Line Tool
-        run: npm install -g allure-commandline puppeteer
+        run: npm install -g allure-commandline
 
-      # Step 7: Generate Allure Report
-      - name: Generate Allure Report
+      # Step 7: Generate Allure Single HTML Report
+      - name: Generate Allure Single HTML Report
         run: |
           rm -rf allure-report
-          allure generate allure-results --clean -o allure-report || echo "Report generation failed"
+          allure generate --single-file allure-results --clean -o allure-report || echo "Report generation failed"
         continue-on-error: true
 
-      # Step 8: Convert Allure Report to Single HTML File
-      - name: Convert Allure Report to Single HTML File
-        run: |
-          echo "Converting Allure report to a single HTML file..."
-          node <<EOF
-          const puppeteer = require('puppeteer');
-          const fs = require('fs');
-
-          (async () => {
-              const browser = await puppeteer.launch({ args: ['--no-sandbox', '--disable-setuid-sandbox'] });
-              const page = await browser.newPage();
-              await page.goto('file://$PWD/allure-report/index.html', { waitUntil: 'networkidle0' });
-
-              // Save the HTML content
-              const htmlContent = await page.content();
-              fs.writeFileSync('allure-report.html', htmlContent);
-
-              await browser.close();
-          })();
-          EOF
-
-      # Step 9: Send Email with Allure Report as Attachment
+      # Step 8: Send Email with Allure Report as Attachment
       - name: Send Email with Allure Report
         uses: dawidd6/action-send-mail@v3
         with:
@@ -696,9 +675,9 @@ jobs:
           body: "The Allure report is attached as a single HTML file. Open it in your browser to view the test results."
           to: "sazidahmednassir@gmail.com"
           from: ${{ secrets.EMAIL_USERNAME }}
-          attachments: allure-report.html
+          attachments: allure-report/index.html
 
-      # Step 10: Fail Workflow if Tests Failed
+      # Step 9: Fail Workflow if Tests Failed
       - name: Fail Workflow if Tests Failed
         if: failure()
         run: exit 1
