--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -9,7 +9,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: "0 18 * * *"    
+    - cron: "20 18 * * *" # Runs every day at 12:20 a.m. Bangladesh Time (UTC+6)
 
 jobs:
   test:
@@ -59,7 +59,7 @@ jobs:
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
           subject: "Allure Test Report"
-          body: "Here are the Current test results."
+          body: "The Allure report is attached as a single HTML file. Open it in your browser to view the test results."
           to: "sazidahmednassir@gmail.com"
           from: ${{ secrets.EMAIL_USERNAME }}
           attachments: allure-report/index.html
