--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -60,7 +60,7 @@ jobs:
           password: ${{ secrets.EMAIL_PASSWORD }}
           subject: "Allure Test Report"
           body: "The Allure report is attached as a single HTML file. Open it in your browser to view the test results."
-          to: "sazidahmednassir@gmail.com"
+          to: "nassirctg1234@gmail.com"
           from: ${{ secrets.EMAIL_USERNAME }}
           attachments: allure-report/index.html
 
