--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,6 +2,7 @@
 name: Playwright Tests with Allure Report as Single HTML
 
 on:
+  workflow_dispatch: # Allow manual trigger from GitHub UI
   push:
     branches:
       - main
@@ -9,11 +10,14 @@ on:
     branches:
       - main
   schedule:
-    - cron: "10 19 * * *" # Runs every day at 1:00 a.m. Bangladesh Time (UTC+6)
+    - cron: "18 19 * * *" # Runs every day at 1:10 AM Bangladesh Time (UTC+6)
 
 jobs:
   test:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write # Needed for using GITHUB_TOKEN and uploading files
 
     steps:
       # Step 1: Checkout the repository
